--- a/styles/main.css
+++ b/styles/main.css
@@ -38,12 +38,21 @@ a:visited {
     font-size: 16px;
     text-transform: uppercase;
     color: #4a4a4a;
-    
+    text-align: center;
 }
 
 .main-menu ul li {
-    display: inline-block;
+    display: inline;
     padding: 0 20px 0 0;
+    
+}
+
+.main-menu ul {
+    padding-inline-start: 20px;  
+}
+
+.main-content {
+    background-color: #3CDBC0;
 }
 
 .title {
@@ -52,7 +61,7 @@ a:visited {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #3CDBC0;
+    font-weight: bold;
     color: #fff;
     text-align: center;
     font-size: 30px;
