--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
 }
 body {
     font-family: 'Rubik', sans-serif;
-    margin: 0;
+    margin: auto;
 }
 
 a {
@@ -30,7 +30,7 @@ a:visited {
 
 .logo img {
     width: 100%;
-    margin: 10px 0;
+    margin: 10px 0px;
 }
 
 .main-menu {
@@ -73,5 +73,15 @@ a:visited {
         justify-content: space-between;
         align-items: center;
         padding: 20px 30px;
+       
+    }
+
+    .main-menu {
+        
+        
+    }
+
+    .title {
+        font-size: 40px;
     }
 }
