--- a/styles/main.css
+++ b/styles/main.css
@@ -81,12 +81,12 @@ a:visited {
 
     .main-menu {
         margin-bottom: 0;
-        margin-right: 30px;
+        margin-right: 20px;
         /* word-spacing: 20px; */
     }
 
     .main-menu ul li {
-        padding: 20px;  
+        /* padding: 20px;   */
     }
 
     .title {
