--- a/styles/main.css
+++ b/styles/main.css
@@ -85,10 +85,9 @@ a:visited {
         /* word-spacing: 20px; */
     }
 
-    .main-menu ul li {
-        /* padding: 20px;   */
-    }
-
+   /* .main-menu ul li {
+         padding: 20px;   
+    } */
     .title {
         font-size: 40px;
     }
